--- a/index.html
+++ b/index.html
@@ -10,6 +10,30 @@
     <title>Путешествие на луну</title>
 </head>
 <body>
-    
+
+    <!-- Преимущества компании -->
+    <div class="section">
+        <div class="container advantages">
+            <div class="row">
+                <div class="col-3">
+                    <img src="img/advantage-icon-1.png" alt="">
+                    <p>Комфортабельные<br> ракеты отечественного<br> производства.</p>
+                </div>
+                <div class="col-3">
+                    <img src="img/advantage-icon-2.png" alt="">
+                    <p>Вкусное и полезное<br> космическое питание<br> на борту.</p>
+                </div>
+                <div class="col-3">
+                    <img src="img/advantage-icon-3.png" alt="">
+                    <p>Весь состав пилотов<br> состоит из бывших<br> космонавтов.</p>
+                </div>
+                <div class="col-3">
+                    <img src="img/advantage-icon-4.png" alt="">
+                    <p>Экскурсии на луноходе<br> на Море Ясности<br> и Океан Бурь.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
 </body>
 </html>
