--- a/index.html
+++ b/index.html
@@ -10,6 +10,36 @@
     <title>Путешествие на луну</title>
 </head>
 <body>
-    
+  <section id="main">
+    <div class="container">
+      <nav class="row justify-content-between align-items-center" id="menu">
+        <div class="col">
+          <a href="#"><img class="img-fluid" src="img/logo.png" alt="Logo"></a>
+        </div>
+        <div class="col-9 justify-content-start">
+          <a href="#">Компания</a>
+          <a href="#">Каталог</a>
+          <a href="#">Контакты</a>
+        </div>
+        <div class="col-2">
+          <a href="#"><img class="img-fluid" src="img/mail-icon.png" alt="Mail"></a>
+          <a href="#"><img class="img-fluid" src="img/phone-icon.png" alt="Call"></a>
+        </div>
+      </nav>
+      <div class="row justify-content-around align-items-center main-text">
+        <div class="col-3">
+          <h1>На Луну и обратно</h1>
+          <p>Космически крутой туризм. Пакетные и индивидуальные туры по лучшим планетам галактики.</p>
+          <a href="#" class="select_tour">
+            Подбор тура
+            <img class= "img-fluid"src="img/right-arrow-dark.png" alt="rigth-arrow-dark">
+          </a>
+        </div>
+        <div class="col-5">
+          <img src="img/moon-rocket.png" alt="Rocket" class="img-fluid">
+        </div>
+      </div>
+    </div>
+  </section>
 </body>
 </html>
