--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   </section>
 
     <!-- Преимущества компании -->
-    <div class="section">
+    <section class="description">
         <div class="container advantages">
             <div class="row">
                 <div class="col-3">
@@ -62,6 +62,41 @@
                     <img src="img/advantage-icon-4.png" alt="">
                     <p>Экскурсии на луноходе<br> на Море Ясности<br> и Океан Бурь.</p>
                 </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Описание компании -->
+    <div class="container">
+        <div class="row">
+            <div class="col">
+                <img src="img/map.jpg" alt="Map">
+            </div>
+            <div class="col">
+                <h2>Надоело летать в отпуск за границу? Как на счет того, чтобы слетать на Луну?</h2>
+                <p>Устали от пакетных туров и пляжного отдыха? Полотенца и магнитики, которые вы привозите из отпуска
+                    уже не радуют ваших близких? В следующий раз привезите им настоящий лунный камень!</p>
+                <p>Мы предлагаем инновационную услугу на туристическом рынке - космический туризм (пока только на Луну,
+                    сейчас решаем вопросы с визовым центром Венеры).</p>
+                <p>Берите отпуск и отправляйтесь с нами в полет, он займет всего 72 часа!</p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col">
+                <h2>Не забудьте взять с собой:</h2>
+                <ul>
+                    <li><b>Паспорт.</b> Визовый режим пока не введен, но на границе будет досмотр.</li>
+                    <li><b>Тяжелые ботинки.</b> Пригодятся вам в условиях низкой гравитации на Луне.</li>
+                    <li><b>Криптовалюта.</b> Рекомендуем заранее обменять немного Лун-коинов, чтобы купить сувениры.</li>
+                </ul>
+            </div>
+            <div class="col">
+                <h2>Это лучше оставить дома:</h2>
+                <ul>
+                    <li><b>Телефон.</b> В космосе не ловит ваш любимый оператор и нет Wi-Fi.</li>
+                    <li><b>Бутерброды.</b> На борту будет питание, которое не разлетится по кабине в условиях невесомости.</li>
+                    <li><b>Плавки/купальник.</b> Море Ясности и Океан Бурь это большие кратеры. Без воды.</li>
+                </ul>
             </div>
         </div>
     </div>
