Сверстал раздел с расписанием полетов

--- a/index.html
+++ b/index.html
@@ -101,5 +101,49 @@
         </div>
     </div>
 
+    <section id="flight_schedule">
+      <div class="container">
+        <div class="row justify-content-center">
+          <div class="col-6">
+            <h4>Расписание полетов</h4>
+          </div>
+          <div class="col-6">
+            <p>Для вашего удобства мы разработали график полетов 
+              с вылетами из Москвы и Санкт-Петербурга. Вы также можете
+              запросить <a href="#">индивидуальный полет</a>.
+            </p>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-12">
+            <table id="schedule">
+              <thead>
+                <tr>
+                  <th>№ Рейса</th>
+                  <th>Откуда — куда</th>
+                  <th>Время вылета</th>
+                  <th>Время прилета</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td>1635</td>
+                  <td>VKO — MOON</td>
+                  <td>00:45</td>
+                  <td>23:15</td>
+                </tr>
+                <tr>
+                  <td>70200</td>
+                  <td>LED — MOON</td>
+                  <td>17:30</td>
+                  <td>16:20</td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+        </div>
+      </div>
+    </section>
+
 </body>
 </html>
