Сверстал footer и поправил раздел с расписаниями

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>Путешествие на луну</title>
 </head>
 <body>
-  <section id="main">
+  <main>
     <div class="container">
       <nav class="row justify-content-between align-items-center" id="menu">
         <div class="col">
@@ -40,8 +40,8 @@
         </div>
       </div>
     </div>
-  </section>
-
+  </main>
+  
     <!-- Преимущества компании -->
     <section class="description">
         <div class="container advantages">
@@ -145,5 +145,73 @@
       </div>
     </section>
 
+    <footer>
+      <div class="container">
+        <div class="row g-0 justify-content-between align-items-center footer-nav-header">
+          <div class="col">
+            <img class="img-fluid" src="img/logo.png" alt="Logo">
+          <span>Space Z</span>
+        </div>
+        <div class="col">
+          <a href="#">Компания</a>
+          <div class="line"></div>
+        </div>
+        <div class="col">
+          <a href="#">Каталог</a>
+          <div class="line"></div>
+        </div>
+        <div class="col">
+          <a href="#">Контакты</a>
+          <div class="line"></div>
+        </div>
+      </div>
+      <div class="row g-0 align-items-end justify-content-center footer-nav-link">
+        <div class="col">
+          <span>ООО «Космос Зэ». <br>
+            Все права защищены.
+          </span>
+        </div>
+        <div class="col">
+          <ul>
+            <li>
+              <a href="#">История</a>
+            </li>
+            <li>
+              <a href="#">Миссия</a>
+            </li>
+            <li>
+              <a href="#">Команда</a>
+            </li>
+          </ul>
+        </div>
+        <div class="col">
+          <ul>
+            <li>
+              <a href="#">Полеты</a>
+            </li>
+            <li>
+              <a href="#">Проживание</a>
+            </li>
+            <li>
+              <a href="#">Экскурсии</a>
+            </li>
+          </ul>
+        </div>
+        <div class="col">
+          <ul>
+            <li>
+              <a href="#">Отправить заявку</a>
+            </li>
+            <li>
+              <a href="#">Схема проезда</a>
+            </li>
+            <li>
+              <a href="#">Время работы</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+    </footer>
 </body>
 </html>
