Стилизовала раздел с описанием компании и поправила раздел с преимуществами

--- a/index.html
+++ b/index.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/bootstrap-grid.min.css">
-    <link rel="stylesheet" href="css/bootstrap-reboot.min.css">
-    <link rel="stylesheet" href="css/main.css">
-    <title>Путешествие на луну</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="css/bootstrap-grid.min.css">
+  <link rel="stylesheet" href="css/bootstrap-reboot.min.css">
+  <link rel="stylesheet" href="css/main.css">
+  <link rel="shortcut icon" href="img/logo.png">
+  <title>Путешествие на луну</title>
 </head>
+
 <body>
-  <main>
+  <header>
     <div class="container">
       <nav class="row justify-content-between align-items-center" id="menu">
         <div class="col">
@@ -32,7 +35,7 @@
           <p>Космически крутой туризм. Пакетные и индивидуальные туры по лучшим планетам галактики.</p>
           <a href="#" class="select_tour">
             Подбор тура
-            <img class= "img-fluid"src="img/right-arrow-dark.png" alt="rigth-arrow-dark">
+            <img class="img-fluid" src="img/right-arrow-dark.png" alt="rigth-arrow-dark">
           </a>
         </div>
         <div class="col-5">
@@ -40,116 +43,119 @@
         </div>
       </div>
     </div>
-  </main>
-  
-    <!-- Преимущества компании -->
-    <section class="description">
-        <div class="container advantages">
-            <div class="row">
-                <div class="col-3">
-                    <img src="img/advantage-icon-1.png" alt="">
-                    <p>Комфортабельные<br> ракеты отечественного<br> производства.</p>
-                </div>
-                <div class="col-3">
-                    <img src="img/advantage-icon-2.png" alt="">
-                    <p>Вкусное и полезное<br> космическое питание<br> на борту.</p>
-                </div>
-                <div class="col-3">
-                    <img src="img/advantage-icon-3.png" alt="">
-                    <p>Весь состав пилотов<br> состоит из бывших<br> космонавтов.</p>
-                </div>
-                <div class="col-3">
-                    <img src="img/advantage-icon-4.png" alt="">
-                    <p>Экскурсии на луноходе<br> на Море Ясности<br> и Океан Бурь.</p>
-                </div>
-            </div>
-        </div>
-    </section>
+  </header>
 
-    <!-- Описание компании -->
-    <div class="container">
-        <div class="row">
-            <div class="col">
-                <img src="img/map.jpg" alt="Map">
-            </div>
-            <div class="col">
-                <h2>Надоело летать в отпуск за границу? Как на счет того, чтобы слетать на Луну?</h2>
-                <p>Устали от пакетных туров и пляжного отдыха? Полотенца и магнитики, которые вы привозите из отпуска
-                    уже не радуют ваших близких? В следующий раз привезите им настоящий лунный камень!</p>
-                <p>Мы предлагаем инновационную услугу на туристическом рынке - космический туризм (пока только на Луну,
-                    сейчас решаем вопросы с визовым центром Венеры).</p>
-                <p>Берите отпуск и отправляйтесь с нами в полет, он займет всего 72 часа!</p>
-            </div>
+  <!-- Преимущества компании -->
+  <section class="description">
+    <div class="container advantages">
+      <div class="row">
+        <div class="col-3">
+          <img src="img/advantage-icon-1.png" alt="icon_one">
+          <p>Комфортабельные<br> ракеты отечественного<br> производства.</p>
         </div>
-        <div class="row">
-            <div class="col">
-                <h2>Не забудьте взять с собой:</h2>
-                <ul>
-                    <li><b>Паспорт.</b> Визовый режим пока не введен, но на границе будет досмотр.</li>
-                    <li><b>Тяжелые ботинки.</b> Пригодятся вам в условиях низкой гравитации на Луне.</li>
-                    <li><b>Криптовалюта.</b> Рекомендуем заранее обменять немного Лун-коинов, чтобы купить сувениры.</li>
-                </ul>
-            </div>
-            <div class="col">
-                <h2>Это лучше оставить дома:</h2>
-                <ul>
-                    <li><b>Телефон.</b> В космосе не ловит ваш любимый оператор и нет Wi-Fi.</li>
-                    <li><b>Бутерброды.</b> На борту будет питание, которое не разлетится по кабине в условиях невесомости.</li>
-                    <li><b>Плавки/купальник.</b> Море Ясности и Океан Бурь это большие кратеры. Без воды.</li>
-                </ul>
-            </div>
+        <div class="col-3">
+          <img src="img/advantage-icon-2.png" alt="icon_two">
+          <p>Вкусное и полезное<br> космическое питание<br> на борту.</p>
         </div>
-    </div>
-
-    <section id="flight_schedule">
-      <div class="container">
-        <div class="row justify-content-center">
-          <div class="col-6">
-            <h4>Расписание полетов</h4>
-          </div>
-          <div class="col-6">
-            <p>Для вашего удобства мы разработали график полетов 
-              с вылетами из Москвы и Санкт-Петербурга. Вы также можете
-              запросить <a href="#">индивидуальный полет</a>.
-            </p>
-          </div>
+        <div class="col-3">
+          <img src="img/advantage-icon-3.png" alt="icon_three">
+          <p>Весь состав пилотов<br> состоит из бывших<br> космонавтов.</p>
         </div>
-        <div class="row">
-          <div class="col-12">
-            <table id="schedule">
-              <thead>
-                <tr>
-                  <th>№ Рейса</th>
-                  <th>Откуда — куда</th>
-                  <th>Время вылета</th>
-                  <th>Время прилета</th>
-                </tr>
-              </thead>
-              <tbody>
-                <tr>
-                  <td>1635</td>
-                  <td>VKO — MOON</td>
-                  <td>00:45</td>
-                  <td>23:15</td>
-                </tr>
-                <tr>
-                  <td>70200</td>
-                  <td>LED — MOON</td>
-                  <td>17:30</td>
-                  <td>16:20</td>
-                </tr>
-              </tbody>
-            </table>
-          </div>
+        <div class="col-3">
+          <img src="img/advantage-icon-4.png" alt="icon_four">
+          <p>Экскурсии на луноходе<br> на Море Ясности<br> и Океан Бурь.</p>
         </div>
       </div>
-    </section>
+    </div>
+  </section>
 
-    <footer>
-      <div class="container">
-        <div class="row g-0 justify-content-between align-items-center footer-nav-header">
-          <div class="col">
-            <img class="img-fluid" src="img/logo.png" alt="Logo">
+  <!-- Описание компании -->
+  <section class="about_company">
+    <div class="container">
+      <div class="row first_string">
+        <div class="col-6">
+          <img src="img/map.jpg" alt="Map">
+        </div>
+        <div class="col-6">
+          <h2>Надоело летать в отпуск за границу? Как на счет того, чтобы слетать на Луну?</h2>
+          <p>Устали от пакетных туров и пляжного отдыха? Полотенца и магнитики, которые вы привозите из отпуска
+            уже не радуют ваших близких? В следующий раз привезите им настоящий лунный камень!</p>
+          <p>Мы предлагаем инновационную услугу на туристическом рынке - космический туризм (пока только на Луну,
+            сейчас решаем вопросы с визовым центром Венеры).</p>
+          <p>Берите отпуск и отправляйтесь с нами в полет, он займет всего 72 часа!</p>
+        </div>
+      </div>
+      <div class="row second_string">
+        <div class="col-6">
+          <h2>Не забудьте взять с собой:</h2>
+          <ul>
+            <li><span><b>Паспорт.</b> Визовый режим пока не введен, но на границе будет досмотр.</span></li>
+            <li><span><b>Тяжелые ботинки.</b> Пригодятся вам в условиях низкой гравитации на Луне.</span></li>
+            <li><span><b>Криптовалюта.</b> Рекомендуем заранее обменять немного Лун-коинов, чтобы купить сувениры.</span></li>
+          </ul>
+        </div>
+        <div class="col-6">
+          <h2>Это лучше оставить дома:</h2>
+          <ul>
+            <li><span><b>Телефон.</b> В космосе не ловит ваш любимый оператор и нет Wi-Fi.</span></li>
+            <li><span><b>Бутерброды.</b> На борту будет питание, которое не разлетится по кабине в условиях невесомости.</span></li>
+            <li><span><b>Плавки/купальник.</b> Море Ясности и Океан Бурь это большие кратеры. Без воды.</span></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </section>
+  
+  <!-- Расписание полетов -->
+  <section id="flight_schedule">
+    <div class="container">
+      <div class="row justify-content-center">
+        <div class="col-6">
+          <h4>Расписание полетов</h4>
+        </div>
+        <div class="col-6">
+          <p>Для вашего удобства мы разработали график полетов
+            с вылетами из Москвы и Санкт-Петербурга. Вы также можете
+            запросить <a href="#">индивидуальный полет</a>.
+          </p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-12">
+          <table id="schedule">
+            <thead>
+              <tr>
+                <th>№ Рейса</th>
+                <th>Откуда — куда</th>
+                <th>Время вылета</th>
+                <th>Время прилета</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>1635</td>
+                <td>VKO — MOON</td>
+                <td>00:45</td>
+                <td>23:15</td>
+              </tr>
+              <tr>
+                <td>70200</td>
+                <td>LED — MOON</td>
+                <td>17:30</td>
+                <td>16:20</td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <footer>
+    <div class="container">
+      <div class="row g-0 justify-content-between align-items-center footer-nav-header">
+        <div class="col">
+          <img class="img-fluid" src="img/logo.png" alt="Logo">
           <span>Space Z</span>
         </div>
         <div class="col">
@@ -212,6 +218,6 @@
         </div>
       </div>
     </div>
-    </footer>
+  </footer>
 </body>
 </html>
