Сверстала раздел с формой

--- a/index.html
+++ b/index.html
@@ -106,6 +106,41 @@
     </div>
   </section>
   
+  <!-- Форма -->
+  <section class="application_form">
+    <div class="container">
+      <div class="row">
+        <div class="col-6">
+          <h2>Готовы открыть для себя что-то новое?</h2>
+          <p>Отправьте заявку, заполнив форму справа, мы рассмотрим вашу кандидатуру и свяжемся с вами в течение 24 часов.</p>
+        </div>
+        <div class="col-6">
+          <form action="#">
+            <div class="form_group">
+              <input type="text" placeholder="ФИО">
+            </div>
+            <div class="form_group">
+              <input type="tel" placeholder="Контактный телефон">
+            </div>
+            <div class="parameters">
+              <div class="form_group">
+                <input type="height" placeholder="Рост">
+              </div>
+              <div class="form_group">
+                <input type="weight" placeholder="Вес">
+              </div>
+            </div>
+            <div class="form_group agree">
+              <input id="subscribe" type="checkbox" class="custom_checkbox">
+              <label for="subscribe">Согласен(а) на обработку персональных данных</label>
+            </div>
+            <button>ОТПРАВИТЬ<img src="img/right-arrow-white.png" alt="right-arrow-white"></button>
+          </form>
+        </div>
+      </div>
+    </div>
+  </section>
+
   <!-- Расписание полетов -->
   <section id="flight_schedule">
     <div class="container">
