Добавил классы к колонкам

--- a/index.html
+++ b/index.html
@@ -144,11 +144,11 @@
   <!-- Расписание полетов -->
   <section id="flight_schedule">
     <div class="container">
-      <div class="row justify-content-center">
-        <div class="col-6">
+      <div class="row description_schedule justify-content-center">
+        <div class="col-6 schedule_header">
           <h4>Расписание полетов</h4>
         </div>
-        <div class="col-6">
+        <div class="col-6 schedule_text">
           <p>Для вашего удобства мы разработали график полетов
             с вылетами из Москвы и Санкт-Петербурга. Вы также можете
             запросить <a href="#">индивидуальный полет</a>.
@@ -189,30 +189,30 @@
   <footer>
     <div class="container">
       <div class="row g-0 justify-content-between align-items-center footer-nav-header">
-        <div class="col">
+        <div class="col nav-header">
           <img class="img-fluid" src="img/logo.png" alt="Logo">
           <span>Space Z</span>
         </div>
-        <div class="col">
+        <div class="col nav-header">
           <a href="#">Компания</a>
           <div class="line"></div>
         </div>
-        <div class="col">
+        <div class="col nav-header">
           <a href="#">Каталог</a>
           <div class="line"></div>
         </div>
-        <div class="col">
+        <div class="col nav-header">
           <a href="#">Контакты</a>
           <div class="line"></div>
         </div>
       </div>
       <div class="row g-0 align-items-end justify-content-center footer-nav-link">
-        <div class="col">
+        <div class="col nav-link">
           <span>ООО «Космос Зэ». <br>
             Все права защищены.
           </span>
         </div>
-        <div class="col">
+        <div class="col nav-link">
           <ul>
             <li>
               <a href="#">История</a>
@@ -225,7 +225,7 @@
             </li>
           </ul>
         </div>
-        <div class="col">
+        <div class="col nav-link">
           <ul>
             <li>
               <a href="#">Полеты</a>
@@ -238,7 +238,7 @@
             </li>
           </ul>
         </div>
-        <div class="col">
+        <div class="col nav-link">
           <ul>
             <li>
               <a href="#">Отправить заявку</a>
